fix overflow thing

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -49,7 +49,7 @@ table {
 }
 /* Start of my CSS */
 body {
-    background-color: LightGray;
+  background-color: LightGray;
 }
 /*div {
     border: 1px solid Chocolate;
@@ -64,7 +64,7 @@ body {
 }
 .content {
   width: 970px;
-  height: 70px;
+  overflow: hidden;
   margin: 0 auto;
   padding: 0px 15px;
 }
